--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ img {
     width: 100%;
     height: 93vh;
     position: relative;
-    background: url('/img/background-min.png') no-repeat center center/cover;
+    background: url('https://i.ibb.co/vXqDmnh/background.jpg') no-repeat center center/cover;
 }
 
 .showcase::after {
